data/derived/comb/progs/unify/prog3089.ml.out
Characters 92-93:
  | a :: [b] -> b :: listReverse a;;
                                 ^
Error: This expression has type 'a but an expression was expected of type
         'a list
       The type variable 'a occurs inside 'a list
